--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,15 @@
 
 {% load static %} 
 
-<header class="bg-gradient-dark">
+<header class="bg-dark">
   <div class="page-header min-vh-75 bg-gradient-dark opacity-6" style="height: 500px; background-image: url('https://stagescycling.com/media/.renditions/wysiwyg/stages-cycling/landing-pages/home/2021/commercial_indoor_cycles-smiling-700px_by_500px.jpg')">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center mx-auto my-auto">
-          <h1 class="text-white">Welcome to Ladybike</h1>
-          <p class="lead mb-4 text-white opacity-8">We’re passionate female cycling professionals who wants to make cycling training a fun experience for other females!</p>
-          <p>Book a session today and we'll make sure you have a great sweaty experience!</p>
-          <button type="submit" class="btn bg-white text-dark">Book Now!</button>
+          <h1 class="text-white">Welcome to <span><strong style="color: #d606ba;">Ladybike</strong></span></h1>
+          <p class="lead mb-4 text-white opacity-8 display-6">We’re passionate female cycling professionals who wants to make cycling training a fun experience for other females!</p>
+          <h4 class="text-white mb-3">Book a session today and we'll make sure you have a great sweaty experience!</h4>
+          <button type="submit" class="btn bg-white font-weight-bold" style="color: #d606ba; font-weight: 800;">Book Now!</button>
         </div>
       </div>
     </div>
@@ -39,9 +39,9 @@
               <div class="col-md-6 col-lg-3 px-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
               style="text-align:center" data-aos="fade-up">
                   <div class="icon-box">
-                      <div class="icon"><img src="{% static 'images/Strong_girl.png' %}" alt="Strong_girl">
+                      <div class="icon mb-3"><img src="{% static 'images/Strong_girl.png' %}" alt="Strong_girl">
                       </div>
-                      <h5 class="title">Become Stronger</h5>
+                      <h5 class="title">Become <span><strong style="color: #d606ba;">Stronger</strong></span></h5>
                       <p>LadyBike encourages you to get a better cyclist week by week! You progress gradually, increasing the
                         intensity in each workout.</p>
                   </div>
@@ -51,9 +51,9 @@
               <div class="col-md-6 col-lg-3 px-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
               style="text-align:center" data-aos="fade-up" data-aos-delay="100">
                   <div class="icon-box">
-                      <div class="icon"><img src="{% static 'images/Community.png' %}" alt="Community">
+                      <div class="icon mb-3"><img src="{% static 'images/Community.png' %}" alt="Community">
                       </div>
-                      <h5 class="title">Join Our Community</h5>
+                      <h5 class="title">Join Our <span><strong style="color: #d606ba;">Community</strong></span></h5>
                       <p>LadyBike has a great community of women interested in Cycling. Connect with like-minded people and 
                         share your experiences and aspirations!</p>
                   </div>
@@ -63,9 +63,9 @@
               <div class="col-md-6 col-lg-3 px-4 d-flex align-items-stretch mb-5 mb-lg-0 aos-init aos-animate justify-content-center"
               style="text-align:center" data-aos="fade-up" data-aos-delay="200">
                   <div class="icon-box">
-                      <div class="icon"><img src="{% static 'images/Cyclist.png' %}"  alt="Cyclist">
+                      <div class="icon mb-3"><img src="{% static 'images/Cyclist.png' %}"  alt="Cyclist">
                       </div>
-                      <h5 class="title">Only For Women</h5>
+                      <h5 class="title">Only For <span><strong style="color: #d606ba;">Women</strong></span></h5>
                       <p>LadyBike offers three cycling indoor workouts ONLY for women! LadyBike is a place for women who are focused on their health and fitness and 
                         want to become better cyclists.</p>
                   </div>
@@ -80,13 +80,13 @@
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 </div>
                 <div class="card-body text-center">
-                  <h5 class="font-weight-normal">
+                  <h4 class="font-weight-normal" style="color: #d606ba;">
                     Articles
-                  </h5>
+                  </h4>
                   <p class="mb-0">
                     Our articles aim to provide you with great content to isnpire you follow a healthy lifestyle.
                   </p>
-                  <a class="btn bg-gradient-info btn-sm mb-0 mt-3" href="articles.html"><button type="button" >Find out more</button>
+                  <a class="btn bg-gradient-info btn-sm mb-0 mt-3" style="background-color: #d606ba;" href="articles.html"><button type="button" >Find out more</button>
                 </a>
                 </div>
               </div>
@@ -136,7 +136,7 @@
                     <div>Hello! I’m Emma — wife, mother and an Olympic Cyclist. 
                       After having my baby, Alexandra, I decided that I need to take a break from competiitons and  
                       focus more on sharing my experince and passion about cycling and helathy lifestyle with other women. 
-                      You can find me on the Ride that hill and Spinning classes! </div>
+                      You can find me on the Ride that hill and Spinning classes!</div>
                   </div>
                 </div><!--//card-body-->
                 <div class="card-footer theme-bg-primary border-0 text-center">
