--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,7 +176,7 @@ body {
 }
 
 
-.bg-gradient-dark {
+.bg-dark {
     background-image: linear-gradient(195deg, #42424a 0%, #191919 100%);
 }
 
@@ -324,7 +324,7 @@ body {
 }
 
 .card {
-    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -1px rgb(0 0 0 / 6%);
+    box-shadow: 0 4px 6px -1px rgb(214 6 186 / 30%), 0 2px 4px -1px rgb(214 6 186/ 16%);
 }
 
 .border-radius-md {
@@ -359,6 +359,12 @@ body {
     margin-top: calc(var(--bs-gutter-y) * -1);
     margin-right: calc(var(--bs-gutter-x) * -.5);
     margin-left: calc(var(--bs-gutter-x) * -.5);
+}
+
+.bg-gradient-info:hover {
+    color: #d606ba;
+    background: transparent;
+    border: none;
 }
 
 
@@ -426,6 +432,14 @@ body {
     box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%) !important;
 }
 
+
+/* Classes Page */
+
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
 
 /* Nav bar display if user logged in or not */
 
