--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                     </li>
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
-                        <!-- Display manage reservations, edit customer details & logout option if user is logged in -->
+                        <!-- Display manage bookings, edit customer details & logout option if user is logged in -->
 
                         <li class="nav-item fuxia-bground ml-auto">
                         <a class="nav-link {% if request.resolver_match.url_name == 'manage_booking' %}
