--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                     Articles
                   </h4>
                   <p class="mb-0">
-                    Our articles aim to provide you with great content to isnpire you follow a healthy lifestyle.
+                    Our articles provide great content to inspire you to follow a healthy lifestyle.
                   </p>
                   <a class="btn bg-gradient-info btn-sm mb-0 mt-3" style="background-color: #d606ba;" href="articles.html"><button type="button" >Find out more</button>
                 </a>
