--- a/templates/base.html
+++ b/templates/base.html
@@ -46,15 +46,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item" style="font-size: 1.1rem;">
                         <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" style="font-size: 1.1rem;">
                         <a class="nav-link active" aria-current="page" href="{% url 'articles' %}">Articles</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" style="font-size: 1.1rem;">
                         <a class="nav-link active" aria-current="page" href="/classes">Classes</a>
                     </li>
+                </ul>
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
                         <!-- Display manage bookings, edit customer details & logout option if user is logged in -->
