--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,4 +1,44 @@
-<form method = "GET">
-    {{ form }}
-    <input type = "submit" value = "Submit">
-</form>
+{% extends "base.html" %}
+
+{% block title %} Booking {% endblock %} 
+
+{% block body_class %} booking-page {% endblock %}
+
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
+
+{% block content %}
+
+{% load static %} 
+{% load crispy_forms_tags %}
+<div class="container-fluid">
+    <div class="row d-flex justify-content-center">
+        <div class="col-sm-8">
+            <h2 class="text-center mt-2 mb-3">Book a class with <span class="brand">Lady<span class="pink-lady"><span
+                class="thin">|Bike</span></span></span></h2>
+            <h5 class="text-center mt-2 mb-3">We offer a maximum capacity of ten people per class and recommend booking one week in advance.</h5>
+            <p class="text-center mb-5">All classes are one hour long. Bring a towel and a water bottle with you.</p>
+        </div>
+    </div>
+
+    <div class="row d-flex justify-content-center">
+        <div class="col-xs-10 col-sm-6 col-md-8 col-lg-6 col-xl-5">
+            <!-- Display both forms together -->
+            <form method="POST" class="mb-5 booking-enquiry full-form">
+
+                {% csrf_token %}
+
+                <!-- Customer form -->
+                {{ customer_form | crispy }}
+
+                <!-- Booking form -->
+                {{ booking_form | crispy }}
+
+                <button type="submit" class="button mt-4 text-center submit-button">Book Class</button>
+
+            </form>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
