--- a/templates/manage_booking.html
+++ b/templates/manage_booking.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 
+{% block title %} Manage Bookings {% endblock %} 
+
+{% block body_class %} manage-booking {% endblock %}
+
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
+
 {% block content %}
+
+{% load static %} 
 <div class="container-fluid">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-8 text-center">
