--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -1,26 +1,39 @@
-{% extends 'base.html' %} {% block content %}
+{% extends "base.html" %}
+
+{% block title %} Artcle Detail {% endblock %} 
+
+{% block body_class %} artcle {% endblock %}
+
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
+
+{% block content %}
+
+{% load static %} 
+{% load crispy_forms_tags %}
 
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
                 <!-- Article title goes in these h1 tags -->
-                <h1 class="article-title">
+                <h1 class="post-title">{{ post.title }}
                 </h1>
                 <!-- Article author goes before the | the article's created date goes after -->
-                <p class="article-subtitle"> | </p>
+                <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "placeholder" in post.featured_image.url %}
                 <img src="https://stagescycling.com/media/.renditions/wysiwyg/stages-cycling/landing-pages/home/2021/commercial_indoor_cycles-smiling-700px_by_500px.jpg" width="100%">
                 {% else %}
-                <img src="" width="100%">
+                <img src="{{ post.featured_image.url }}" width="100%">
                 {% endif %}
             </div>
         </div>
     </div>
 </div>
+
 
 <div class="container">
     <div class="row">
@@ -28,15 +41,15 @@
             <div class="card-body">
                 <!-- The article's content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text "></p>
+                <p class="card-text">{{ post.content | safe }}</p>
                 <div class="row">
 
                     <div class="col-1">
                         <strong>
                             <!-- If user loggedin they can like/unlike the article -->
-                            {% if.user.is_authenticated %}
+                            {% if user.is_authenticated %}
                             <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
-                                {% csr_token %}
+                                {% csrf_token %}
                                 {% if liked %}
 
                                 <button type="submit" name="article_id" value="{{post.slug}}" class="btn-like" >
