--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,9 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center mx-auto my-auto">
           <h1 class="text-white">Welcome to <span><strong style="color: #d606ba;">Ladybike</strong></span></h1>
-          <p class="lead mb-4 text-white opacity-8 display-6">We’re passionate female cycling professionals who wants to make cycling training a fun experience for other females!</p>
-          <h4 class="text-white mb-3">Book a session today and we'll make sure you have a great sweaty experience!</h4>
-          <button type="submit" class="btn bg-white font-weight-bold" style="color: #d606ba; font-weight: 800;">Book Now!</button>
+          <p class="lead mb-4 text-white opacity-8 display-6">We’re passionate female cycling professionals who want to make cycling training a fun experience for other females!</p>
+          <h4 class="text-white mb-3">Book a session today, and we'll ensure you have a great sweaty experience!</h4>
+          <button type="submit" class="btn bg-white font-weight-bold" style="color: #d606ba; font-weight: 800;"><a href="{% url 'booking' %}" style="color: #d606ba;">Book Now!</a></button>
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@
   
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-lg-4 ms-auto mt-lg-0 mt-4">
+            <div class="col-lg-12 ms-auto mt-lg-0 mt-4">
               <div class="card">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 </div>
@@ -134,8 +134,9 @@
                     <h5 class="member-name mb-0 text-center font-weight-bold" style="color:#d606ba;">Emma Thomas</h5>
                     <div class="mb-3 text-center">Olympic Cyclist / Personal Trainer</div>
                     <div>Hello! I’m Emma — wife, mother and an Olympic Cyclist. 
-                      After having my baby, Alexandra, I decided that I need to take a break from competiitons and  
-                      focus more on sharing my experince and passion about cycling and helathy lifestyle with other women. 
+                      After having my baby, Alexandra, I decided to take a break from competitions and  
+                      focus more on sharing my experience, passion for cycling, and healthy lifestyle with other women. 
+                      I love what I do and what better to share it with you?
                       You can find me on the Ride that hill and Spinning classes!</div>
                   </div>
                 </div><!--//card-body-->
