--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -2,7 +2,7 @@
 
 {% block title %} Artcle Detail {% endblock %} 
 
-{% block body_class %} artcle {% endblock %}
+{% block body_class %} article {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
