--- a/templates/classes.html
+++ b/templates/classes.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center mx-auto my-auto">
-            <h1 class="text-white">Our  <span><strong style="color: #42424a">Classes</strong></span></h1>
+            <h1 class="text-white">Our  <span><strong style="color: #42424a;">Classes</strong></span></h1>
             <p class="lead mb-4 text-white opacity-8 display-6">Learn more about our classes and book the one that suits you the best!</p>
           </div>
         </div>
@@ -34,10 +34,13 @@
                             <div class="card-body">
                                 <img  class="card-img-top" src="{% static 'images/header.jpg' %}" alt="spinning_class">
                                 <h2 class="card-title pt-4" style="color: #d606ba;">Spinning</h2>
-                                <h6>Last: 60 minutes</h6>
-                                <h6>Calories burnt: 400-500</h6>
-                                <p class="card-text">It relies on a combination of fast-paced cycling and strategic lighter 
-                                    rest intervals to get you recovered for the next burst.
+                                <h6>Available: <span style="color: #d606ba;">Everyday</span></h6>
+                                <h6>Start Time: <span style="color: #d606ba;">07:00 AM</span></h6>
+                                <h6>Ends: <span style="color: #d606ba;">08:00 AM</span></h6>
+                                <h6>Calories burnt: <span style="color: #d606ba;">400-500</span></h6>
+                                <p class="card-text">In spin class, you pedal along on a stationary bike as the instructor guides you through a 
+                                    visualization of an outdoor workout. The pace and speed will vary throughout the workout, sometimes requiring 
+                                    break-neck speed, and other times pedaling happens from a slow, standing position.
                                 </p>
                             </div>
                             <div class="card-footer text-center" style="background-color: #d606ba;"><a class="btn btn-secondary btn-lg" href="{% url 'booking' %}">Book</a></div>
@@ -50,10 +53,13 @@
                             <div class="card-body">
                                 <img  class="card-img-top" src="{% static 'images/ride_that_hill_class.png' %}" alt="spinning_class">
                                 <h2 class="card-title pt-4" style="color: #d606ba;">Ride That Hill</h2>
-                                <h6>Last: 60 minutes</h6>
-                                <h6>Calories burnt: 500-600</h6>
-                                <p class="card-text">It is an indoor cycling climbing drill where you simulate a hill that creeps 
-                                    in grade into a very steep mountain like grade by the end. A great class to increase your strength and power.
+                                <h6>Available: <span style="color: #d606ba;">Everyday</span></h6>
+                                <h6>Start Time: <span style="color: #d606ba;">11:30 AM</span></h6>
+                                <h6>Ends: <span style="color: #d606ba;">12:30 PM</span></h6>
+                                <h6>Calories burnt: <span style="color: #d606ba;">500-600</span></h6>
+                                <p class="card-text">Ride that hill is an indoor cycling climbing drill where you simulate a hill that creeps 
+                                    in grade into a very steep mountain like grade by the end. Whilst cycling up hills seated, you engage your quads, 
+                                    glutes and calves more than you would if you were cycling on flat terrain. A great class to increase your strength and power.
                                 </p>
                             </div>
                             <div class="card-footer text-center" style="background-color: #d606ba;"><a class="btn btn-secondary btn-lg" href="{% url 'booking' %}">Book</a></div>
@@ -66,8 +72,10 @@
                             <div class="card-body">
                                 <img  class="card-img-top" src="{% static 'images/ladybike_class.jpg' %}" alt="spinning_class">
                                 <h2 class="card-title pt-4" style="color: #d606ba;">Ladybike</h2>
-                                <h6>Last: 60 minutes</h6>
-                                <h6>Calories burnt: 600-700</h6>
+                                <h6>Available: <span style="color: #d606ba;">Everyday</span></h6>
+                                <h6>Start Time: <span style="color: #d606ba;">18:00 PM</span></h6>
+                                <h6>Ends: <span style="color: #d606ba;">19:00 PM</span></h6>
+                                <h6>Calories burnt: <span style="color: #d606ba;">600-700</span></h6>
                                 <p class="card-text">Is an intense combo class that will push your body to the limit. 
                                     It combines intervals of cardio with strength conditioning, moving quickly between 
                                     the bike and equipment on the ground. Expect to work with dumbbells, bands, gliders, and your own body-weight.</p>
