--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,20 +3,18 @@
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block title %} Sign IN {% endblock %} 
-
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-
-<div class="page-header align-items-start min-vh-100" style="background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');" loading="lazy">
-  <span class="mask bg-gradient-dark opacity-6"></span>
+{% load static %} 
+<div class="page-header align-items-start min-vh-100" style="background-image: url({% static 'images/bike_pink.jpg' %});" loading="lazy">
   <div class="container my-auto">
+<div class="row py-2">
     <div class="row">
       <div class="col-lg-4 col-md-8 col-12 mx-auto">
         <div class="card z-index-0 fadeIn3 fadeInBottom">
           <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-            <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
+            <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1" style="background-color: #d606ba;">
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                 Sign in to your LadyBike account
               </h4>
@@ -38,13 +36,8 @@
               {% if redirect_field_value %}
               <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
               {% endif %}
-              <div class="form-check form-switch d-flex align-items-center mb-3">
-                <input class="form-check-input" type="checkbox" id="rememberMe">
-                <label class="form-check-label mb-0 ms-2" for="rememberMe">Remember me</label>
-              </div>
               <div class="text-center">
-                <button type="submit" name="login" 
-                        class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
+              <button class="btn btn-signup right" type="submit" style="background-color: #d606ba;">{% trans "Sign In" %}</button>
               </div>
               <p class="mt-4 text-sm text-center">
                 Don't have an account?
@@ -57,5 +50,7 @@
     </div>
   </div>
 </div>
+</div>
+</div>
 
-{% endblock content %}
+{% endblock %}
