--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 
+{% block title %} Artcles {% endblock %} 
+
+{% block body_class %} articles {% endblock %}
+
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
+
 {% block content %}
+
+{% load static %} 
 
 <div class="container-fluid">
     <div class="row">
@@ -33,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
+                {% if forloop.counter|divisibleby:4 %}
             </div>
             <div class="row">
                 {% endif %}
