--- a/templates/booking.html
+++ b/templates/booking.html
@@ -11,11 +11,12 @@
 
 {% load static %} 
 {% load crispy_forms_tags %}
+<div class="page-header align-items-start min-vh-100" style="background-image: url({% static 'images/bike_pink.jpg' %});" loading="lazy">
 <div class="container-fluid">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-8">
-            <h2 class="text-center mt-2 mb-3">Book a class with <span class="brand">Lady<span class="pink-lady"><span
-                class="thin">|Bike</span></span></span></h2>
+            <h2 class="text-center mt-2 mb-3">Book a class with <span class="brand">Lady<span class="fuxia-lady"><span
+                class="fuxia-thin">|Bike</span></span></span></h2>
             <h5 class="text-center mt-2 mb-3">We offer a maximum capacity of ten people per class and recommend booking one week in advance.</h5>
             <p class="text-center mb-5">All classes are one hour long. Bring a towel and a water bottle with you.</p>
         </div>
@@ -39,6 +40,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
