--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %} Home Page {% endblock %} 
+{% block title %} Home {% endblock %} 
 
-{% block body_class %} home-page {% endblock %}
+{% block body_class %} home {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
