Made vlidation check

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                 </ul>
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
-                        <!-- Display manage bookings, like the artcles & logout option if user is logged in -->
+                        <!-- Display manage bookings, like the articles & logout option if user is logged in -->
 
                         <li class="nav-item fuxia-bground ml-auto">
                         <a class="nav-link {% if request.resolver_match.url_name == 'manage_booking' %}
@@ -117,7 +117,7 @@
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Made by Vanessa Andersson</p>
         <p class="m-0 text-center text-white">Follow me:
-            <i class="fa-brands fa-github"><a href="https://github.com/van-essa" target="_blank" title="Vanessa"></a></i>
+            <i class="fab fa-github"><a href="https://github.com/van-essa" target="_blank" title="Vanessa"></a></i>
             <i class="fab fa-linkedin-in"><a href="https://www.linkedin.com/in/vanessaannamariaandersson/" target="_blank" title="My_LinkedIn"></a></i>
     </footer>
 
