Booking system completed

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -33,7 +33,8 @@
                 <!-- Booking form -->
                 {{ booking_form | crispy }}
 
-                <button type="submit" class="button mt-4 text-center submit-button">Book Class</button>
+                <button type="submit" class="button mt-4 text-center submit-button" style="background-color: #d606ba;
+                color: white;">Book Class</button>
 
             </form>
         </div>
