--- a/templates/manage_booking.html
+++ b/templates/manage_booking.html
@@ -15,9 +15,9 @@
         <div class="col-sm-8 text-center">
             <h2 class=" mt-2 mb-3">Manage your bookings</h2>
             <!-- Let the user get all the info to ensure that their are using the right credentials -->
-            <p class="mt-2">Hello, <strong>{{ customer.full_name }}</strong>!<br>
+            <p class="mt-2">Hello, <strong>{{ Customer.full_name }}</strong>!<br>
                 Here you'll find the classes booked with this email adress: 
-                <strong>{{ customer.email }}</strong></p>
+                <strong>{{ Customer.email }}</strong></p>
             <p class="mt-2">You can make changes to your bookings by using the options below.</p>
             <p class="mt-2 mb-4">If you make any changes, your booking status will change to 'pending' as we need
                 to ensure that the class is available.</p>
@@ -28,7 +28,7 @@
         <div class="col-sm-12">
             <div class="row d-flex justify-content-center">
                 <!-- For each booking -->
-                {% for bookings in booking %}
+                {% for booking in booking %}
                 <div class="col-md-6 col-lg-4">
                     <ul class="booking-list text-center" id="{{ booking.booking_id }}">
                         <li class="booking-item">
